--- a/src/AspNet.Security.OAuth.VidZapper/project.json
+++ b/src/AspNet.Security.OAuth.VidZapper/project.json
@@ -1,19 +1,19 @@
 {
-  "version": "1.0.0-beta2-*",
+  "version": "1.0.1-beta2-*",
 
   "description": "ASP.NET Core security middleware enabling VidZapper authentication.",
   "authors": [ "Anuj Pandey" ],
 
   "packOptions": {
-    "owners": [ "Kévin Chalet", "Jerrie Pelser" ],
+    "owners": [ "Anuj Pandey" ],
 
-    "projectUrl": "https://github.com/aspnet-contrib/AspNet.Security.OAuth.Providers",
-    "iconUrl": "https://avatars3.githubusercontent.com/u/7998081?s=64",
+    "projectUrl": "https://github.com/qanuj/AspNet.Security.OAuth.Providers",
+    "iconUrl": "https://live.vzconsole.com/content/icons/vidzapper/apple-icon-72x72.png",
     "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0.html",
 
     "repository": {
       "type": "git",
-      "url": "git://github.com/aspnet-contrib/AspNet.Security.OAuth.Providers"
+      "url": "git://github.com/qanuj/AspNet.Security.OAuth.Providers"
     },
 
     "tags": [
